--- a/vscode/petrichorianhopscript/package.json
+++ b/vscode/petrichorianhopscript/package.json
@@ -3,6 +3,7 @@
   "displayName": "phs",
   "description": "petrichorian hopscript",
   "version": "0.0.1",
+  "main":"./client/out/extension",
   "engines": {
     "vscode": "^1.85.0"
   },
@@ -21,5 +22,22 @@
       "scopeName": "source.phs",
       "path": "./syntaxes/phopscript.tmLanguage.json"
     }]
-  }
+  },
+  "scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -b",
+		"watch": "tsc -b -w",
+		"lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
+		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
+		"test": "sh ./scripts/e2e.sh"
+	},
+	"devDependencies": {
+		"@types/mocha": "^10.0.6",
+		"@types/node": "^18.14.6",
+		"@typescript-eslint/eslint-plugin": "^6.14.0",
+		"@typescript-eslint/parser": "^6.14.0",
+		"eslint": "^8.56.0",
+		"mocha": "^10.2.0",
+		"typescript": "^5.3.3"
+	}
 }
