--- a/vscode/petrichorianhopscript/client/package.json
+++ b/vscode/petrichorianhopscript/client/package.json
@@ -13,6 +13,9 @@
 		"vscode": "^1.75.0"
 	},
 	"dependencies": {
+		"@vscode/debugadapter": "^1.64.0",
+		"@vscode/debugprotocol": "^1.64.0",
+		"await-notify": "^1.0.1",
 		"vscode-languageclient": "^9.0.1"
 	},
 	"devDependencies": {
