--- a/vscode/petrichorianhopscript/package.json
+++ b/vscode/petrichorianhopscript/package.json
@@ -21,7 +21,27 @@
       "language": "phopscript",
       "scopeName": "source.phs",
       "path": "./syntaxes/phopscript.tmLanguage.json"
-    }]
+    }],
+    "debuggers": [
+      {
+        "type": "phopscript",
+        "languages": ["phopscript"],
+        "program": "./client/out/debugAdapter.js",
+        "runtime": "node",
+        "configurationAttributes": {
+          "launch": {
+            "required": ["program"],
+            "properties": {
+              "program": {
+                "type": "string",
+                "description": "Absolute path to a hopscript file",
+                "default": "${workspaceFolder}/flappybird.htn"
+              }
+            }
+          }
+        }
+      }
+    ]
   },
   "scripts": {
 		"vscode:prepublish": "npm run compile",
