--- a/vscode/petrichorianhopscript/package.json
+++ b/vscode/petrichorianhopscript/package.json
@@ -41,6 +41,11 @@
           }
         }
       }
+    ],
+    "breakpoints": [
+      {
+        "language": "phopscript"
+      }
     ]
   },
   "scripts": {
